--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="videos">Video</string>
     <string name="cast">Cast</string>
     <string name="homepage">Homepage: %s</string>
+    <string name="movie_card_transition_name">movie_card_transition_name</string>
 </resources>
